[package]
name = "mc_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mc_utils"
path = "src/main.rs"

[lib]
name = "mc_utils"
path = "src/lib/lib.rs"


[dependencies]
quartz_nbt = "0.2.8"
rayon = "1.9.0"

ggez = "0.9.3"
ggegui = "0.4.0"
tinyfiledialogs = "3.9.1"

[profile.dev.package."*"]
opt-level = 2