[package]
name = "mc_utils"
version = "0.1.0"
edition = "2021"
default-run = "viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mc_utils"
path = "src/main.rs"

[lib]
name = "mc_utils"
path = "src/lib/lib.rs"


[dependencies]
quartz_nbt = "0.2.9"

rayon = "1.10.0"

ggez = "0.9.3"
ggegui = "0.4.0"
tinyfiledialogs = "3.9.1"

clap = { version = "4.4.18", features = ["derive"]}

flate2 = "1.0.30"
java_string = { version = "0.1.2", features = ["serde"] }
byteorder = "1.5.0"
num_enum = "0.7.2"

base64 = "0.22.1"
serde = "1.0.208"
serde_json = "1.0.125"

thiserror = "1.0.60"
anyhow = "1.0.83"

[profile.dev.package."*"]
opt-level = 2